Improve Docker configuration after initial deployment